# fjord

./: CMakeLists.txt  README.md
res/: deer.fjord  fire.fjord
src/: fjord.cpp  rtl.cpp
src/fjord/: block.hpp  decoder.cpp  decoder.hpp  format.hpp  image.cpp  image.hpp  pixel.hpp  point.hpp  quadtree.hpp  rect.hpp  size.hpp  symmetry.hpp  transform.hpp  windows.hpp
src/resources/: gallery.hpp
